# ai-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/ai-memory-cli/: Cargo.toml
crates/ai-memory-cli/src/: auth.rs  cli.rs  config.rs  logging.rs  main.rs
crates/ai-memory-cli/templates/: config.default.toml
crates/ai-memory-cli/tests/: packaging.rs  removal.rs  routing_instructions.rs
crates/ai-memory-consolidate/: Cargo.toml
crates/ai-memory-consolidate/src/: auto_improve.rs  bootstrap.rs  consolidator.rs  (+3 more)
crates/ai-memory-core/: Cargo.toml
crates/ai-memory-core/src/: active_project.rs  lib.rs  page.rs  routing_skills.rs  routing_snippet.rs  sanitize.rs
crates/ai-memory-mcp/: Cargo.toml
docker/: .env.production.example
docs/: ARCHITECTURE.md  deploy.md  design-decisions.md  install.md  issues-mempalace.md  lifecycle-ops.md  llm-provider-comparison.md  macos.md  marker-file.md  mcp-install.md  research-agentmemory.md  research-basic-memory.md  research-cognee.md  research-karpathy-llm-wiki.md  usage.md  users.md  windows.md
evals/src/: main.rs
hooks/: _lib.sh
hooks/claude-code/: post-tool-use.sh  pre-compact.sh  pre-tool-use.sh  session-end.sh  session-start.sh  stop.sh  user-prompt-submit.sh
hooks/codex/: post-tool-use.sh  pre-compact.sh  pre-tool-use.sh  session-end.sh  session-start.sh  stop.sh  user-prompt-submit.sh
hooks/opencode/: post-tool-use.sh  pre-compact.sh  pre-tool-use.sh  session-end.sh  session-start.sh  stop.sh  user-prompt-submit.sh
tests/hooks/: test_lib.sh
(+42 files in other folders)
