[package]
name = "ai-memory-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core domain types and errors for ai-memory."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
jiff.workspace = true
regex.workspace = true
tracing.workspace = true

[lints]
workspace = true
